--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "axios": "^0.20.0",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
     "pug": "^3.0.0",
@@ -71,6 +73,7 @@
     "swiper": "^6.1.2",
     "vue": "^2.6.7",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   }
 }
