--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ls-advanced-boilerplate",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,8 @@
     "build": "webpack --mode=production --progress",
     "reg": "node reg-util.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,10 @@
     "@storybook/addons": "^6.0.18",
     "@storybook/source-loader": "^6.0.18",
     "@storybook/vue": "^6.0.18",
+    "@vue/test-utils": "^1.1.0",
     "autoprefixer": "^9.4.8",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.5",
     "babel-preset-vue": "^2.0.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -33,6 +37,7 @@
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-advanced-variables": "^3.0.0",
@@ -52,6 +57,7 @@
     "svg-transform-loader": "^2.0.13",
     "svgo-loader": "^2.2.0",
     "terser-webpack-plugin": "^3.0.6",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.5",
